--- a/ML0120EN-2.1-Review-Understanding_Convolutions.ipynb
+++ b/ML0120EN-2.1-Review-Understanding_Convolutions.ipynb
@@ -1231,9 +1231,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-python-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1245,7 +1245,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.3"
   },
   "widgets": {
    "state": {},
